# lagrangian

./: .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: benchmark.md  conf.py  conventions.md  examples.md  getting-started.md  index.md  roadmap.md
docs/_templates/autosummary/: module.rst
docs/api/: index.md
docs/manual/: anomalies.md  charges.md  decays.md  decays_roadmap.md  declaration.md  diagonalization.md  export.md  flavor.md  invariance.md  lagrangian.md  masses.md  pipeline.md  ssb.md  suggest.md  verification.md  vertices.md
docs/tutorials/: ModelBuilding_Tutorial.ipynb  Particle_Decays_Tutorial.ipynb  SM_Feynman_Rules_Tutorial.ipynb  SM_Seesaw_Tutorial.ipynb  SM_U1X_Tutorial.ipynb  SM_VLL_Tutorial.ipynb  SUN_Groups_Tutorial.ipynb  index.md
examples/: ModelBuilding_Tutorial.ipynb  Particle_Decays_Tutorial.ipynb  SM_Feynman_Rules_Tutorial.ipynb  SM_Seesaw_Tutorial.ipynb  SM_U1X_Tutorial.ipynb  SM_VLL_Tutorial.ipynb  SUN_Groups_Tutorial.ipynb  TUTORIAL.md  fermi_theory.py  sm_ckm.py  sm_decays.py  sm_higgs_decays.py  sm_scalar_gauge.py  sm_seesaw.py  sm_u1x.py  sm_vll.py  sm_weinberg.py  thdm.py  thdm_s3.py
scripts/: benchmark_results.json  export_sm_ufo.py  madgraph_fermi.py  madgraph_roundtrip.py
src/feynlag/: __init__.py  anomalies.py  charges.py  conventions.py  dirac.py  fields.py  flavor.py  invariance.py  lagrangian.py  models.py  operators.py  parameters.py  suggest.py
src/feynlag/export/: __init__.py  latex.py
src/feynlag/export/ufo/: __init__.py  lorentz_map.py  pycode.py  static.py  vvvv.py  writer.py
src/feynlag/groups/: __init__.py  base.py  discrete.py  gauge.py  sun.py
src/feynlag/pheno/: __init__.py  amplitudes.py  calculator.py  integrate.py  kinematics.py  lorentz.py  offshell.py  particles.py  propagator.py  trace.py  vertices.py
src/feynlag/vacuum/: __init__.py  diagonalize.py  ewsb.py  masses.py  tadpoles.py
src/feynlag/verify/: __init__.py  checks.py  ufo_roundtrip.py
src/feynlag/vertices/: __init__.py  bilinear.py  extract.py  vertex.py  yangmills.py
tests/: test_anomalies.py  test_charges.py  test_checks.py  test_ckm.py  test_dirac.py  test_extract.py  test_fermion_sector.py  test_fields.py  test_four_fermion.py  test_gauge_sector_sm.py  test_groups.py  test_invariance.py  test_latex.py  test_majorana.py  test_models.py  test_offshell.py  test_operators.py  test_parameters.py  test_pheno.py  test_qcd.py  test_repr_latex.py  test_scalar_pipeline_sm.py  test_scalar_pipeline_thdm.py  test_seesaw.py  test_suggest.py  test_sun.py  test_thdm_s3.py  test_u1x.py  test_ufo_export.py  test_ufo_qcd.py  test_validation.py  test_vll.py  test_yangmills.py
