[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feynlag"
version = "0.1.0"
description = "Tree-level Feynman rules from BSM Lagrangians in pure SymPy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Moises Zeleny", email = "moiseszeleny@gmail.com" }]
dependencies = ["sympy>=1.12"]

[project.optional-dependencies]
dev = ["pytest>=7", "numpy", "nbstripout"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
