[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feynlag"
version = "0.1.0"
description = "Tree-level Feynman rules from BSM Lagrangians in pure SymPy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Moises Zeleny", email = "moiseszeleny@gmail.com" }]
keywords = [
    "physics", "particle-physics", "high-energy-physics", "feynman-rules",
    "lagrangian", "bsm", "beyond-standard-model", "sympy", "ufo", "madgraph",
    "quantum-field-theory", "phenomenology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["sympy>=1.12"]

[project.urls]
Homepage = "https://github.com/moiseszeleny/lagrangian"
Repository = "https://github.com/moiseszeleny/lagrangian"
Documentation = "https://github.com/moiseszeleny/lagrangian"
Issues = "https://github.com/moiseszeleny/lagrangian/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "numpy", "nbstripout"]
docs = ["sphinx>=7", "myst-nb", "furo", "sphinx-copybutton", "sphinx-design",
        "sphinxcontrib-mermaid"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
